Bugfix: DirectoryWatcher now continues watching directories after restarting and re-adding paths to watch.